--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # Runs every day at midnight
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
 jobs:
@@ -17,8 +17,10 @@ jobs:
             ./output/github-snake.svg
             ./output/github-snake-dark.svg
 
-      - name: Commit & Push
+      - name: Push to GitHub
         uses: EndBug/add-and-commit@v9
         with:
+          add: 'output/*.svg'
           default_author: github_actions
-          message: "🐍 Generated GitHub Snake contribution graph"
+          message: "🐍 Generate GitHub Snake contribution graph"
+          push: true  # ✅ This line fixes your error
