--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,16 @@ on:
     - cron: "0 0 * * *"
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Generate Snake SVG
         uses: Platane/snk@v3
         with:
@@ -23,4 +29,4 @@ jobs:
           add: 'output/*.svg'
           default_author: github_actions
           message: "🐍 Generate GitHub Snake contribution graph"
-          push: true  # ✅ This line fixes your error
+          push: true
